kubernetes/order/order.yml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "order-service"
  name: "order-service"
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8084
  selector:
    app: "maxilog-order"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "maxilog-order"
  name: "maxilog-order"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "maxilog-order"
  template:
    metadata:
      labels:
        app: "maxilog-order"
    spec:
      containers:
        - image: "maxilog/order:latest"
          imagePullPolicy: "IfNotPresent"
          name: "maxilog-order"
          ports:
            - containerPort: 8084
              name: "order-http"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order
#  annotations:
#    plugins.konghq.com: kong-oidc
spec:
  rules:
    - http:
        paths:
          - path: /order
            backend:
              serviceName: order-service
              servicePort: 80
